[package]
name = "daisy_patch_embassy"
version = "0.1.0"
edition = "2021"

[dependencies]
daisy-embassy = { git = "https://github.com/Dicklessgreat/daisy-embassy.git", rev = "e79de575a7b020aaba8138dd1837e6ba0b3e4b74", features = ["seed_1_2"], default-features = false}
embassy-stm32 = { version = "0.2.0", features = ["defmt", "stm32h750ib", "time-driver-tim5", "exti", "memory-x", "unstable-pac", "chrono"] }
embassy-time = { version = "0.4.0", features = ["defmt", "defmt-timestamp-uptime", "tick-hz-32_768"] }
embassy-sync = { version = "0.6.2", features = ["defmt"] }
embassy-executor = { version = "0.7.0", features = ["task-arena-size-32768", "arch-cortex-m", "executor-thread", "executor-interrupt", "defmt"] }
embassy-futures = "0.1.1"
embassy-usb = "0.4.0"
cortex-m = { version = "0.7.7", features = ["inline-asm", "critical-section-single-core"] }
cortex-m-rt = { version = "0.7.5", features = ["device"] }
critical-section = "1.2.0"
defmt = "1.0.1"
defmt-rtt = "1.0.0"
panic-probe = { version = "1.0.0", features = ["print-defmt"] }